fixed opening overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -94,6 +94,7 @@ body {
 	margin: 0.625rem 0;
 	width: 100%;
 	z-index: 50;
+	overflow: hidden;
 }
 
 @media all and (max-width: 600px) {
